fin de la première journée

--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENI MEMORY</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styleIndex.css">
 </head>
 <body>
+<header>
+   <h1>🦋 ENI - <strong>MEMORY</strong> - Accueil 🦋</h1>
+    <div class="menu">
+        <ul class="menuListe">
+            <li class="accueil">Accueil✨</li>
+            <li><a href="sinscrire.html">S'inscrire✨</a></li>
+            <li><a href="connexion.html">Se connecter✨</a></li>
+            <li><a href="compte.html">Profil✨</a></li>
+            <li><a href="jeu.html">Jouer✨</a></li>
+        </ul>
+        </div> 
+</header>
+<main>
+    
+    <div class="consignes">
+        <p>Bienvenue sur le site du Memory de l'ENI
+        <br>
+        Venez jouer avec nous et faites le meilleur score possible
+        </p>
+        <h2>Règles du jeu:</h2>
+        <ul>
+            <li>Retournez deux cartes. Si les images sont identiques, le jeu laisse les cartes visibles.</li>
+            <li>Si les images sont différentes, les cartes se retournent faces cachées là où elles étaient.</li>
+            <li>La partie est terminée lorsque toutes les cartes ont été assemblées par paires.</li>
+        </ul>
+        <br>  
+            <img src="Projet/Multimedia/memoryBrtibrit.png" alt="exemple, memory chien">
+        <p>Si vous voulez vous souvenir de votre score. Inscrivez-vous via le formulaire</p>
+        <br>
+        <p>Le jeu garde les <strong>5 meilleurs</strong> scores.</p>
+        <p>Si vous voulez relancer une partie, cliquez sur la <strong>barre espace</strong>.</p>
+
+    </div>
     <Scipt src="js/index.js"></Scipt>
+    </main>
+    <footer>
+        <p>yeah baby</p>
+    </footer>
 </body>
 </html>
