--- a/sinscrire.html
+++ b/sinscrire.html
@@ -20,9 +20,32 @@
              </div> 
      </header>
      <main>
-        <div class="inscrivezvous">
-            
-        </div>
+       <section class="sectionForm">
+        <fieldset>
+            <legend>Formulaire</legend>
+            <form action="" method="POST">
+                <div class="inpute">
+                    <label for="name">Nom d'utilisateur</label>
+                    <input type="text" id="name" required="minlength=3">
+                </div>
+                <div class="inpute">
+                    <label for="email">Entrez votre email:</label>
+                    <input type="email" id="email" pattern="[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]+.[a-zA-Z.]{2,15}">
+                </div> 
+                <div class="inpute">   
+                    <label for="password">Mot de passe:</label>
+                    <input type="password" id="password" name="password" required title="Renseignez un mot de passe (min. 8 caractères dont au moins 1 minuscule, 1 majuscule et un chiffre)" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+                </div> 
+                <div class="inpute">
+                    <label for="mdpVerif">Vérifiez votre mot de passe:</label>
+                    <input type="password" name="mdpVerif" id="mdpVerif" required title="Renseignez un mot de passe (min. 8 caractères dont au moins 1 minuscule, 1 majuscule et un chiffre)" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+                </div>
+                <div class="btn">
+                    <input type="submit" value="Valider" class="btn">
+                </div>
+            </form>
+           </fieldset>
+          </section>  
      </main>
      <footer>
 
