--- a/jeu.html
+++ b/jeu.html
@@ -38,35 +38,38 @@
         <td></td>
     </tr>
     </table>
-    <div class="colonne" id="liste">
-        <div id="grille">
-            <div class="case" id="case0"></div>
-            <div class="case" id="case1"></div>
-            <div class="case" id="case2"></div>
-            <div class="case" id="case3"></div>
-            <div class="case" id="case4"></div>
-            <div class="case" id="case5"></div>
-            <div class="case" id="case6"></div>
-            <div class="case" id="case7"></div>
-            <div class="case" id="case8"></div>
-            <div class="case" id="case9"></div>
-            <div class="case" id="case10"></div>
-            <div class="case" id="case11"></div>
-            <div class="case" id="case12"></div>
-            <div class="case" id="case13"></div>
-            <div class="case" id="case14"></div>
-            <div class="case" id="case15"></div>
-        </div>
-        Vous avez trois minutes, <br/> soit <span style="color:#CC3300;">180 secondes : </span><br/><br/><br/>
-        <span style="font-style:18px; font-weight:normal;">Votre score:<br/>
-        <div id="score" style="font-size:30px;"><srtong>/10</srtong></div>
-        <br/><br/>
-        <div id="temps" style="font-size:20px;"></div><br/>
-        <input type="button" class="btn" value="Nouvelle partie"/>
-    </span>
-    </div>
-    
-    <div id="start" class="playTheGame">JOUER</div>
+    <p>Le nombre de coup est :<span id="nbCoup">0</span><p>
+    <p>Le nombre de paires trouvées est de :<span id="nbPairesTrouvees">0</span></p>
+    <table id="tapis">
+        <tr>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+        </tr>
+        <tr>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+        </tr>
+        <tr>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+        </tr>
+        <tr>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+        </tr>
+    </table>
   </main>  
   <script src="js/jeu.js"></script>
 </body>
