--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div> 
 </header>
 <main>
-    
+   
     <div class="consignes">
         <p>Bienvenue sur le site du Memory de l'ENI
         <br>
@@ -32,8 +32,13 @@
             <li>Si les images sont différentes, les cartes se retournent faces cachées là où elles étaient.</li>
             <li>La partie est terminée lorsque toutes les cartes ont été assemblées par paires.</li>
         </ul>
-        <br>  
+        <br> <div class="button">
+                <a href="jeu.html"><button>Jouer Maintenant</button></a>
+                <a href="sinscrire.html"><button>S'inscrire</button></a>
+                <a href="connexion.html"><button>Se connecter</button></a>
+            </div> 
             <img src="Projet/Multimedia/britney/memoryBrtibrit.png" alt="exemple, memory chien">
+            
         <p>Si vous voulez vous souvenir de votre score. Inscrivez-vous via le formulaire</p>
         <br>
         <p>Le jeu garde les <strong>5 meilleurs</strong> scores.</p>
