--- a/jeu.html
+++ b/jeu.html
@@ -21,7 +21,7 @@
          </div> 
  </header>
  <main>
-    <table>
+    <table class="meilleursScores">
         <caption>Derniers meilleurs scores:</caption>
         <tr>
         <td>Pseudo</td>
@@ -38,14 +38,24 @@
         <td></td>
     </tr>
     </table>
-    <p>Le nombre de coup est :<span id="nbCoup">0</span><p>
-    <p>Le nombre de paires trouvées est de :<span id="nbPairesTrouvees">0</span></p>
+    <div class="score">
+    <p>Le nombre de coup est : <span id="nbCoup">0</span><p>
+    <p>Le nombre de paires trouvées est de : <span id="nbPairesTrouvees">0</span></p>
+    <p><span id="cestGagne">Continues comme ça!</span></p>
+    </div>
     <table id="tapis">
         <tr>
             <td><img src="Projet/Multimedia/carteRetournée.png"></td>
             <td><img src="Projet/Multimedia/carteRetournée.png"></td>
             <td><img src="Projet/Multimedia/carteRetournée.png"></td>
             <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <!-- <td><img src="Projet/Multimedia/carteRetournée.png"></td> -->
+        </tr>
+        <!-- <tr>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
+            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
             <td><img src="Projet/Multimedia/carteRetournée.png"></td>
         </tr>
         <tr>
@@ -61,14 +71,7 @@
             <td><img src="Projet/Multimedia/carteRetournée.png"></td>
             <td><img src="Projet/Multimedia/carteRetournée.png"></td>
             <td><img src="Projet/Multimedia/carteRetournée.png"></td>
-        </tr>
-        <tr>
-            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
-            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
-            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
-            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
-            <td><img src="Projet/Multimedia/carteRetournée.png"></td>
-        </tr>
+        </tr> -->
     </table>
   </main>  
   <script src="js/jeu.js"></script>
