--- a/sinscrire.html
+++ b/sinscrire.html
@@ -51,6 +51,8 @@
                     <li id="chiffre">Doit comporter un chiffre</li>
                     <li id="nbCaracteres">Doit contenir au minimum 8 caractères</li>
                     <li id="identique">La vérification doit être identique au mot de passe</li>
+                    <div id="strength-meter"></div>
+                    <div id="strength-text"></div>
                 </ul>
             </section>
            </fieldset>
